--- a/docs/_site.yml
+++ b/docs/_site.yml
@@ -1,7 +1,7 @@
 name: "meritredist2019"
 output_dir: "." # Esto es para que se compile en el rootdir
 navbar:
-  title: "Measuring meritocratic perceptions and beliefs"
+  title: "Meritocratic beliefs and preferencias redistributivas"
   right:
     - text: "Data preparation"
       href: "prod_prep-data-A.html"
@@ -11,7 +11,7 @@ navbar:
       href: "paper.html"
     - text: ""
       icon: fa-github fa-lg
-      href: https://github.com/juancarloscastillo/merit-scale
+      href: https://github.com/juancarloscastillo/meritocracy-preferences
 output:
   html_document:
     css: "../input/bib/style.css"
