--- a/docs/_site.yml
+++ b/docs/_site.yml
@@ -4,9 +4,9 @@ navbar:
   title: "Meritocratic beliefs and preferencias redistributivas"
   right:
     - text: "Data preparation"
-      href: "prod_prep-data-A.html"
+      href: "prod_prep-data.html"
     - text: "Analysis"
-      href: "prod_analysis-cfa.html"
+      href: "prod_analysis.html"
     - text: "Paper"
       href: "paper.html"
     - text: ""
